fixed href to src in img picture tag. fixed body height/footer overlap issue

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -19,7 +19,7 @@ body {
   margin: 0;
   background-color: var(--cream);
   font-family: var(--font-2);
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   place-items: center;
   margin-bottom: 3rem;
